feat: add route to update and delete url
