# backend/src/modules/urls/application/dtos/update-shortened-url.dto.ts
@@ -1,0 +1,10 @@
+import { IsNotEmpty, IsString, IsUrl, Min, MinLength } from 'class-validator';
+
+export class UpdateShortenedUrlDto {
+  @IsString()
+  @IsNotEmpty()
+  @MinLength(5, {
+    message: 'Shortened URL must have at least 5 characters',
+  })
+  shortened: string;
+}
